// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Property based testig, patchElement called n times snapshoting dom state 1`] = `
{
  "attributes": [],
  "children": [],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 2`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "attributes": [],
      "children": [],
      "id": 2,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "content": "0",
      "id": 3,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 3`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 4`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "non empty string",
      "id": 1,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 5`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "9007199254740991",
      "id": 1,
      "kind": "text",
    },
    {
      "attributes": [],
      "children": [],
      "id": 2,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "content": "Infinity",
      "id": 3,
      "kind": "text",
    },
    {
      "content": "Infinity",
      "id": 4,
      "kind": "text",
    },
    {
      "content": "-9007199254740991",
      "id": 5,
      "kind": "text",
    },
    {
      "content": "",
      "id": 6,
      "kind": "text",
    },
    {
      "attributes": [],
      "children": [],
      "id": 7,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 6`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "non empty string",
      "id": 1,
      "kind": "text",
    },
    {
      "content": "-Infinity",
      "id": 2,
      "kind": "text",
    },
    {
      "attributes": [],
      "children": [],
      "id": 3,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "attributes": [],
      "children": [],
      "id": 4,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "attributes": [],
      "children": [],
      "id": 5,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 7`] = `
{
  "attributes": [],
  "children": [],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 8`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "9007199254740991",
      "id": 1,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 9`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "",
      "id": 1,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 10`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 11`] = `
{
  "attributes": [],
  "children": [],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 12`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "non empty string",
      "id": 1,
      "kind": "text",
    },
    {
      "content": "Infinity",
      "id": 2,
      "kind": "text",
    },
    {
      "content": "9007199254740991",
      "id": 3,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 13`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 14`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "content": "0",
      "id": 2,
      "kind": "text",
    },
    {
      "attributes": [],
      "children": [],
      "id": 3,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "content": "non empty string",
      "id": 4,
      "kind": "text",
    },
    {
      "content": "",
      "id": 5,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 15`] = `
{
  "attributes": [],
  "children": [],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 16`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "0",
      "id": 1,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 17`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "-9007199254740991",
      "id": 1,
      "kind": "text",
    },
    {
      "content": "non empty string",
      "id": 2,
      "kind": "text",
    },
    {
      "attributes": [],
      "children": [],
      "id": 3,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "attributes": [],
      "children": [],
      "id": 4,
      "kind": "element",
      "tag": "DIV",
    },
    {
      "content": "Infinity",
      "id": 5,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 18`] = `
{
  "attributes": [],
  "children": [
    {
      "content": "-Infinity",
      "id": 1,
      "kind": "text",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 19`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;

exports[`Property based testig, patchElement called n times snapshoting dom state 20`] = `
{
  "attributes": [],
  "children": [
    {
      "attributes": [],
      "children": [],
      "id": 1,
      "kind": "element",
      "tag": "DIV",
    },
  ],
  "id": 0,
  "kind": "element",
  "tag": "DIV",
}
`;
